feat(TFD-2986): Improve the UI of Aggregate components.

--- a/components/components-processing/processing-definition/src/main/resources/org/talend/components/processing/definition/aggregate/AggregateOperationProperties.properties
+++ b/components/components-processing/processing-definition/src/main/resources/org/talend/components/processing/definition/aggregate/AggregateOperationProperties.properties
@@ -1,5 +1,5 @@
-form.Main.title=Operations Properties
-form.Main.displayName=Operations Properties
+form.Main.title=
+form.Main.displayName=
 property.fieldPath.displayName=Field
 property.operation.displayName=Operation
 property.outputFieldPath.displayName=Generated field (optional)
